[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bmi-heat"
description = "BMI Python example"
authors = [
  {email = "eric.hutton@colorado.edu"},
  {name = "Eric Hutton"}
]
maintainers = [
  {name = "Mark Piper", email = "mark.piper@colorado.edu"},
  {name = "Eric Hutton", email = "eric.hutton@colorado.edu"},
]
keywords = [
  "bmi",
  "component modeling",
  "csdms",
  "earth science",
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pyyaml",
    "bmipy",
]
dynamic = ["readme", "version"]

[project.urls]
Homepage = "https://csdms.colorado.edu"
Documentation = "https://bmi.readthedocs.io"
Repository = "https://github.com/csdms/bmi-example-python"
Changelog = "https://github.com/csdms/bmi-example-python/blob/master/CHANGES.rst"

[project.optional-dependencies]
testing = [
    "coveralls",
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "ruff",
    "bmi-tester",
]

[tool.setuptools.dynamic]
readme = {file = ["README.rst", "AUTHORS.rst", "CHANGES.rst"]}
version = {attr = "heat._version.__version__"}

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["heat", "tests"]
norecursedirs = [".*", "*.egg*", "build", "dist"]
addopts = """
  --ignore setup.py
  --tb native
  --strict-markers
  --durations 16
  --doctest-modules
  -vvv
"""
doctest_optionflags = [
  "NORMALIZE_WHITESPACE",
  "IGNORE_EXCEPTION_DETAIL",
  "ALLOW_UNICODE"
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88

[tool.ruff]
line-length = 88
lint.ignore = [
	"E203",
	"E501",
]

[tool.coverage.run]
relative_files = true

[tool.zest-releaser]
tag-format = "v{version}"
python-file-with-version = "heat/_version.py"
