[project]
name = "bmi_heat"
requires-python = ">=3.10"
description = "BMI Python example"
keywords = [
    "bmi",
    "component modeling",
    "csdms",
    "earth science",
]
authors = [
    { email = "eric.hutton@colorado.edu" },
    { name = "Eric Hutton" },
]
maintainers = [
    { name = "Mark Piper", email = "mark.piper@colorado.edu" },
    { name = "Eric Hutton", email = "eric.hutton@colorado.edu" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "bmipy",
    "numpy",
    "pyyaml",
    "scipy",
]
dynamic = [
    "readme",
    "version",
]

[project.license]
text = "MIT"

[project.urls]
Changelog = "https://github.com/csdms/bmi-example-python/blob/master/CHANGES.rst"
Documentation = "https://bmi.readthedocs.io"
Homepage = "https://csdms.colorado.edu"
Repository = "https://github.com/csdms/bmi-example-python"

[project.optional-dependencies]
dev = [
    "nox",
]
testing = [
    "bmi-tester>=0.5.7",
    "coveralls",
    "pytest",
    "pytest-cov",
]

[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic.readme]
file = "README.rst"
content-type = "text/x-rst"

[tool.setuptools.dynamic.version]
attr = "heat._version.__version__"

[tool.setuptools.packages.find]
where = [
    ".",
]

[tool.coverage.run]
relative_files = true

[tool.isort]
profile = "black"
force_single_line = "true"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "heat",
    "tests",
]
norecursedirs = [
    ".*",
    "*.egg*",
    "build",
    "dist",
]
addopts = [
    "--ignore=setup.py",
    "--tb=native",
    "--strict-markers",
    "--durations=16",
    "--doctest-modules",
    "-vvv",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ALLOW_UNICODE",
]

[tool.ruff]
line-length = 88
ignore = [
    "E203",
    "E501",
]

[tool.zest-releaser]
tag-format = "v{version}"
python-file-with-version = "heat/_version.py"
