[metadata]
name = bmi-heat
version = 2.1.2.dev0
description = BMI Python example
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Eric Hutton
author_email = eric.hutton@colorado.edu
license = MIT
license_files = LICENSE
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Physics
url = https://github.com/csdms/bmi-example-python

[options]
packages = find:
install_requires =
    bmipy
    numpy
    pyyaml
    scipy

[tool:pytest]
minversion = 3.0
testpaths = heat tests
norecursedirs = .* *.egg* build dist
addopts =
    --ignore setup.py
    --tb native
    --strict
    --durations 16
    --doctest-modules
doctest_optionflags =
    NORMALIZE_WHITESPACE
    IGNORE_EXCEPTION_DETAIL
    ALLOW_UNICODE

[coverage:run]
relative_files = True

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
line_length=88

[flake8]
ignore =
	E203
	E501
	W503
max-line-length = 88

[pylint]
disable = missing-docstring,line-too-long

[zest.releaser]
tag-format = v{version}
